2001-08-28  Kevin Vandersloot <kfv101@psu.edu>

	* load-graph.c: add line divisions to the graph. Make the data
	lines wider (3 pixels - maybe too large).

	* proctable.c: add hack to see if process is graphical. Check
	the memory maps to see if it links to libX11. #ifdefed out
	right now - not sure if it is too useful

2001-08-27  Kevin Vandersloot <kfv101@psu.edu>

	* infoview.c, callbacks.c, load-graph.c: mark the memory size
	strings for translation. bug #59597

2001-08-27  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: mark the author strings for translation
	Fixes bug #59595.

2001-08-26  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: connect to "close" signal for renice dialog.
	Don't popup a new dialog if another already exists.

	* favorites.c: again connect to "close" signal, and only
	do gnome_dialog_close if the close button is pressed.

2001-08-25  Kevin Vandersloot <kfv101@psu.edu>

	Fix bug #59548 by only showing utf8 names for the e-tree
	* procman.h: add name_utf8 string to ProcInfo structure

	* proctable.c (get_name): do the utf8 thing on the name for the
	name_utf8 string and g_strdup the name for the info->name
	(proctable_get_value): return info->name_utf8 here instead
	of info->name.

2001-08-25  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: connect to the "close" signal since "destroy" was
	causing corruption when save the e-tree state file. Try to
	raise the dialog if it already exists. For the close button
	just call gnome_dialog_close, don't call it in the "close" 
	signal handler. Clear the memmaps data at close time

2001-08-24  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c: add a Kill Process item to right click
	menu because there are times when it is needed.

	* procactions.c (kill_process): add an extra argument to
	determine the signal sent.

	* callbacks.c: add popup_menu_end_process to send SIGTERM and
	change popup_menu_kill_process to send SIGKILL and ignore the
	warning dialog.
