@@ -1,5 +1,12 @@
 2001-08-28  Kevin Vandersloot <kfv101@psu.edu>
 
+	* prettytable.c (pretty_table_add_table): fix memory leak.
+	gnome_datadir_file return string should be freed. Add
+	$prefix/applets to the search directories to get some icons
+	for the applets
+
+2001-08-28  Kevin Vandersloot <kfv101@psu.edu>
+
 	* load-graph.c: add line divisions to the graph. Make the data
 	lines wider (3 pixels - maybe too large).
 
